# note-maps

./: .gitignore  .gpm.yaml  .travis.yml  BUILD.md  CHANGELOG.md  Cargo.toml  Makefile  README.md  default.nix  docker.nix  fdroid.nix  flake.nix  go.mod  go.nix  go.sum  gomod2nix.toml  graphviz.nix  hello.nix  packages.nix  shell.nix
api/: note.graphqls
docs/: build.md  data-model.md  design.md  like-editing-a-document.md  requirements.md  ux.md
fdroid/: config.yml
githooks/: pre-commit
js/: README.md  lerna.json  package.json  tsconfig.json  webpack.test.js
kv/: kv.go  kv_test.go  test.sh
nix/: build.sh  dart2nix.sh  default.nix  envrc  nix.mk  shell.nix  sources.json
note/: empty.go  empty_test.go  errors.go  generate_graph.go  generate_id_ot.go  gqlgen.yml  id.go  id_ot.go  id_ot_test.go  id_test.go  notes.go  notes_test.go  op.go  op_test.go  plain.go  plain_note.go  query.go  stage.go  stage_test.go
note_maps/: .gitignore  README.md  pubspec.yaml
notes/: change.go  change_test.go  diff.go  diff_test.go  empty.go  empty_test.go  equal.go  errors.go  generate_id_ot.go  id.go  id_ot.go  id_ot_test.go  id_test.go  interfaces.go  notes.go  notes_test.go  op.go  op_test.go  plain_note.go  query.go  stage.go  stage_test.go
otgen/: generate.go  generate_tmpls.go  generated_tmpls.go  main.go  main_test.go  otgen.go
pwa/: README.md  package-lock.json  package.json  webpack.config.js  webpack.development.js  webpack.production.js
rust/notemaps/: Cargo.toml
rust/notemaps/src/: main.rs
rust/notemaps_core/: Cargo.toml
rust/notemaps_core/src/: am.rs  base.rs  error.rs  lib.rs  markup.rs  text.rs
rust/notemaps_text/: Cargo.toml
rust/notemaps_text/src/: cursor.rs  immutable.rs  lib.rs  mark_set.rs  mark_str.rs  marked.rs  markup.rs  measured.rs  offsets.rs  piece.rs  singleton_set.rs  slice.rs  strtype.rs  table.rs  text.rs
storage/: kvschema.go  storage.go  storage_test.go
store/: store.go  store_test.go
tmaps/: tmaps.go
(+362 files in other folders)
