[package]
name = "notemaps"
version = "0.2.0"
authors = ["Joshua Tacoma <jtacoma@google.com>"]
edition = "2021"
description = "Note Maps application binary"
repository = "https://github.com/google/note-maps"
license = "Apache-2.0"
keywords = ["notemaps"]
categories = ["data-structures", "text-processing"]
publish = false

[dependencies]
env_logger = "0.9.0"
log = "0.4.14"
